--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <div class="interaction">
             <p>Хочешь этого песеля?</p>
 
-            <button class="want">Хочу</button>
-            <button class="dontwant">Не хочу</button>
+            <button onclick="alert('А жаренных гвоздей не хочешь?')" class="want">Хочу</button>
+            <button onclick="alert('А хто тя српашивал?!')" class="dontwant">Не хочу</button>
 
             
         </div>
         </div>
 
-        <img class="ch hid" src="https://sun9-29.userapi.com/impg/dNxtJSL8Lr8sVZKYpWA2zKB2ojPHhCM2sm3qmw/2rWD3xOOmSE.jpg?size=604x388&quality=96&sign=09e1ca73c11af851e6a01345c866b0ee&type=album" alt="">
+        
     </div>
 
     <script src="./script.js"></script>
